# KubeScriptor

./: .dockerignore  .gitignore  Makefile  README.md  compose.yml  docker-compose.yml
.github/workflows/: commander-image.yml  runner-image.yml  tui-image.yml
collection/: Submit Job.yml  opencollection.yml
contracts/: orchestrator.proto  runner.proto
src/Client/: Cargo.toml  Dockerfile  build.rs
src/Client/src/: action.rs  app.rs  client.rs  config.rs  main.rs
src/Client/src/components/: job_detail.rs  job_list.rs  mod.rs
src/Commander/: Commander.sln  Dockerfile
src/Commander/Commander.Core.Tests/Entities/: JobTests.cs
src/Commander/Commander.Core.Tests/Factories/: JobDefinitionFactoryTests.cs
src/Commander/Commander.Core/Entities/: Job.cs
src/Commander/Commander.Core/Factories/: IJobDefinitionFactory.cs  JobDefinitionFactory.cs
src/Commander/Commander.Core/Ports/: IJobStore.cs  IRunnerPort.cs
src/Commander/Commander.Infrastructure/: Commander.Infrastructure.csproj
src/Commander/Commander.Infrastructure.Tests/: Commander.Infrastructure.Tests.csproj
src/Commander/Commander.Infrastructure.Tests/Adapters/: DockerRunnerAdapterTests.cs  InMemoryJobStoreTests.cs
src/Commander/Commander.Server/: Commander.Server.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/Commander/Commander.Server.Tests/: Commander.Server.Tests.csproj
src/Runner/: main.go
src/Runner/internal/: executor.go  executor_test.go  grpc_log_streamer.go  job_fetcher.go  shell_runner.go  shell_runner_test.go
src/Runner/pb/: runner.pb.go  runner_grpc.pb.go
(+8 files in other folders)
