[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
tonic = "0.14.5"
prost = "0.14.3"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "sync"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
